--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
           # находится в ./backend/
           context: ./backend/
           # Параметр push: true указывает, что образ нужно не только собрать,
-          # но и отправить на Docker Hub
+          # но и отправить на Docker Hu
           push: true
           # В параметре tags задаётся название и тег для образа.
           # Для каждого пересобранного образа 
