--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,7 +148,7 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на Docker Hu
+          # Тут вместо username должен быть ваш логин на Docker H
           tags: aimpok/taski_gateway:latest
   deploy:
     runs-on: ubuntu-latest
